--- a/lab1-hello/hello-en/pom.xml
+++ b/lab1-hello/hello-en/pom.xml
@@ -25,6 +25,11 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Bundle-Activator>com.redhat.brq.integration.osgi.hello.impl.en.Activator</Bundle-Activator>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
