[step-2] Initial state

--- a/lab1-hello/pom.xml
+++ b/lab1-hello/pom.xml
@@ -17,5 +17,6 @@
         <module>hello-api</module>
         <module>hello-client</module>
         <module>hello-en</module>
+        <module>hello-de</module>
     </modules>
 </project>
