[step-3] Initial state

--- a/lab1-hello/pom.xml
+++ b/lab1-hello/pom.xml
@@ -18,5 +18,6 @@
         <module>hello-client</module>
         <module>hello-en</module>
         <module>hello-de</module>
+        <module>hello-fr</module>
     </modules>
 </project>
