[step-4] Initial state

--- a/lab1-hello/pom.xml
+++ b/lab1-hello/pom.xml
@@ -19,5 +19,6 @@
         <module>hello-en</module>
         <module>hello-de</module>
         <module>hello-fr</module>
+        <module>hello-tracker</module>
     </modules>
 </project>
